--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   barcode_scan2: ^4.2.4
 
+  #location library
+  geolocator: ^9.0.2
+  background_fetch: ^1.2.0
+  flutter_map: ^5.0.0
+  faker: ^2.1.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
