--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   animations: ^2.0.7
   smooth_page_indicator: ^1.1.0
   barcode_scan2: ^4.2.4
+  flutter_local_notifications: ^15.1.0+1
+  shared_preferences: ^2.2.0
 
   #location library
   geolocator: ^9.0.2
