--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.2.0
   flutter_form_builder: ^9.1.0
   form_builder_validators: ^9.0.0
+  lottie: ^1.1.0
 
   #location library
   geolocator: ^9.0.2
@@ -77,6 +78,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/anims/
 
     - assets/fonts/Poppins-MediumItalic.ttf
     - assets/fonts/Poppins-Regular.ttf
