--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
   http: ^1.1.0
   bottom_navy_bar: ^6.0.0
@@ -42,10 +42,11 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   barcode_scan2: ^4.2.4
   flutter_local_notifications: ^15.1.0+1
-  shared_preferences: ^2.2.0
+  shared_preferences: ^2.1.2
   flutter_form_builder: ^9.1.0
   form_builder_validators: ^9.0.0
-  lottie: ^1.1.0
+  lottie: ^2.6.0
+  battery_plus: ^4.0.2
 
   #location library
   geolocator: ^9.0.2
