--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,10 @@ dependencies:
   form_builder_validators: ^9.0.0
   lottie: ^2.6.0
   battery_plus: ^4.0.2
+  rflutter_alert: ^2.0.7
 
   #location library
-  geolocator: ^9.0.2
+  geolocator: ^10.0.0
   background_fetch: ^1.2.0
   flutter_map: ^5.0.0
   faker: ^2.1.0
