--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   lottie: ^2.6.0
   battery_plus: ^4.0.2
   rflutter_alert: ^2.0.7
+  flutter_staggered_animations: ^1.1.1
 
   #location library
   geolocator: ^10.0.0
