--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,3 +85,12 @@ flutter:
 
     - assets/fonts/Poppins-MediumItalic.ttf
     - assets/fonts/Poppins-Regular.ttf
+
+
+# https://tea.xyz/what-is-this-file
+---
+version: 1.0.0
+codeOwners:
+  - '0xFe10e600444083238b506B480f1b6D8acE0ffcC0'
+quorum: 1
+
